Fixed nav-menu postioning on mobile

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -39,13 +39,15 @@ div#nav-menu {
   .open-nav {
     background-color: rgba(0, 0, 0, 0.75);
     left: 0 !important;
-
+    transform: scale(1) !important;
+    
     div.nav-menu-wrapper {
       right: 0 !important;
     }
   }
 
   div#nav-menu {
+    transform: scale(0);
     .uedoc-quicklinks {
       a {
         padding: 0 2em;
